force-app/main/default/objects/Hung_Status__c/Hung_Status__c.object-meta.xml
<CustomObject>
    <description>This object will different Hung Status details for the Products</description>
    <label>Hung Status</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Hung Status No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hung Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>