force-app/main/default/objects/Hung_Status__c/fields/Days_until_next_attempt__c.field-meta.xml
<CustomField>
    <fullName>Days_until_next_attempt__c</fullName>
    <description>This field is used to store the no Days until next attempt to proceed.</description>
    <label>Days until next attempt</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>