force-app/main/default/objects/Hung_Status__c/fields/Delivery_Product__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Product__c</fullName>
    <description>This field will do a look up to the Products</description>
    <label>Delivery Product</label>
    <referenceTo>Delivery_Product__c</referenceTo>
    <relationshipLabel>Hung Status</relationshipLabel>
    <relationshipName>Hung_Status</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>