force-app/main/default/objects/Hung_Status__c/fields/Hung_Status_Cheetah__c.field-meta.xml
<CustomField>
    <fullName>Hung_Status_Cheetah__c</fullName>
    <description>This field is used to store Cheetah Hang Status</description>
    <label>Hung Status Cheetah</label>
    <length>255</length>
    <type>Text</type>
</CustomField>