force-app/main/default/objects/Hung_Status__c/fields/Hung_Status_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Hung_Status_Salesforce__c</fullName>
    <description>This Field is used to store Salesforce Hang Status</description>
    <label>Hung Status Salesforce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>