force-app/main/default/objects/Hung_Status__c/fields/Maximum_number_of_attempts_per_status__c.field-meta.xml
<CustomField>
    <fullName>Maximum_number_of_attempts_per_status__c</fullName>
    <description>This field is used to store maximum number of attempts per status</description>
    <label>Maximum number of attempts per status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>